[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/3d_control_panel/ControlRodPanel.gd" type="Script" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_Interactables/OQ_ButtonPressable.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/3d_control_panel/IndicatorLight.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=5]

[sub_resource type="VisualShaderNodeColorConstant" id=1]
constant = Color( 0.40625, 0.40625, 0.40625, 1 )

[sub_resource type="VisualShader" id=2]
code = "shader_type spatial;



void vertex() {
// Output:0

}

void fragment() {
// Color:2
	vec3 n_out2p0 = vec3(0.406250, 0.406250, 0.406250);
	float n_out2p1 = 1.000000;

// Output:0
	ALBEDO = n_out2p0;
	ALPHA = n_out2p1;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 0, 114.739 )
nodes/fragment/2/node = SubResource( 1 )
nodes/fragment/2/position = Vector2( 200, 160 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0, 2, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[node name="ControlRodPanel" type="Spatial"]
script = ExtResource( 1 )

[node name="BackPlate" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0.1, 0 )
width = 0.175
height = 0.25
depth = 0.01
material = SubResource( 3 )

[node name="ControlRodLabel" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0982713, 0.256455, 0.0112842 )
text = "Control Rod 1"
margin = 16
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 1 )
transparent = false

[node name="OutLabel" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0648556, 0.139848, 0.0112842 )
text = "OUT"
margin = 16
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 1 )
transparent = false

[node name="OutButton" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 1.49012e-08, 0, 0, 1, -5.96046e-08, 0, 0, 1, 0.0648556, 0.2, 0.0112842 )

[node name="InLabel" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0648556, 0.0553089, 0.0112842 )
text = "IN"
margin = 16
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 1 )
transparent = false

[node name="InButton" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 1.49012e-08, 0, 0, 1, -5.96046e-08, 0, 0, 1, 0.0648556, -1.49012e-08, 0.0112842 )

[node name="IndicatorLights" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0648556, 0, -0.02 )

[node name="IndicatorLight9" parent="IndicatorLights" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.1, 0.18, 0.03 )

[node name="IndicatorLight8" parent="IndicatorLights" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.1, 0.16, 0.03 )

[node name="IndicatorLight7" parent="IndicatorLights" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.1, 0.14, 0.03 )

[node name="IndicatorLight0" parent="IndicatorLights" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.1, 0.12, 0.03 )

[node name="IndicatorLight1" parent="IndicatorLights" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.1, 0.1, 0.03 )

[node name="IndicatorLight2" parent="IndicatorLights" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.1, 0.08, 0.03 )

[node name="IndicatorLight3" parent="IndicatorLights" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.1, 0.06, 0.03 )

[node name="IndicatorLight4" parent="IndicatorLights" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.1, 0.04, 0.03 )

[node name="IndicatorLight5" parent="IndicatorLights" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.1, 0.02, 0.03 )

[node name="IndicatorLight6" parent="IndicatorLights" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.1, -3.72529e-09, 0.0298562 )
